--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
-      background-color: #fff6f2;
+      background-color: ##98ff96;
       margin: 0;
       padding: 1rem;
       color: #333;
     }
     h1 {
       text-align: center;
-      color: #c0392b;
+      color: #009929;
     }
     .malla {
       display: flex;
@@ -37,10 +37,10 @@
     }
     .semestre h2 {
       text-align: center;
-      color: #d35400;
+      color: #bee0ca;
     }
     .ramo {
-      background-color: #fde3cf;
+      background-color: #7db894;
       margin: 0.5rem 0;
       padding: 0.5rem;
       border-radius: 4px;
