--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Malla Medicina Veterinaria - Universidad de Los Lagos</title>
+  <title>Medicina Veterinaria - Universidad de Los Lagos</title>
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
-      background-color: ##98ff96;
+      background-color: #fff6f2;
       margin: 0;
       padding: 1rem;
       color: #333;
     }
     h1 {
       text-align: center;
-      color: #009929;
+      color: #c0392b;
     }
     .malla {
       display: flex;
@@ -29,18 +29,18 @@
     }
     .semestre {
       flex: 1;
-      background-color: #266040;
-      border: 2px solid #266040;
+      background-color: #fceae4;
+      border: 2px solid #e67e22;
       border-radius: 8px;
       padding: 1rem;
       min-width: 200px;
     }
     .semestre h2 {
       text-align: center;
-      color: #266040;
+      color: #d35400;
     }
     .ramo {
-      background-color: #bee0ca;
+      background-color: #fde3cf;
       margin: 0.5rem 0;
       padding: 0.5rem;
       border-radius: 4px;
@@ -52,11 +52,11 @@
       background-color: #f8cfa6;
     }
     .ramo.aprobado {
-      background-color: #609a77;
+      background-color: #d4efdf;
       text-decoration: line-through;
     }
     .ramo.bloqueado {
-      background-color: #437c5b;
+      background-color: #f5b7b1;
       cursor: not-allowed;
     }
     .tooltip {
@@ -82,7 +82,7 @@
   </style>
 </head>
 <body>
-  <h1>Malla Medicina Veterinaria- Universidad de Los Lagos</h1>
+  <h1>Malla Medicina Veterinaria - Universidad de Los Lagos</h1>
   <div class="malla">
     <div class="fila" id="fila-superior"></div>
     <div class="fila" id="fila-inferior"></div>
