--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
-      background-color: ##98ff96;
+      background-color: #98ff96; /* Corregido: había ## */
       margin: 0;
       padding: 1rem;
       color: #333;
@@ -26,10 +26,11 @@
       display: flex;
       justify-content: center;
       gap: 1rem;
+      flex-wrap: wrap;
     }
     .semestre {
       flex: 1;
-      background-color: #266040;
+      background-color: #e8f5e9;
       border: 2px solid #266040;
       border-radius: 8px;
       padding: 1rem;
@@ -82,7 +83,7 @@
   </style>
 </head>
 <body>
-  <h1>Malla Medicina Veterinaria- Universidad de Los Lagos</h1>
+  <h1>Malla Medicina Veterinaria - Universidad de Los Lagos</h1>
   <div class="malla">
     <div class="fila" id="fila-superior"></div>
     <div class="fila" id="fila-inferior"></div>
@@ -99,23 +100,23 @@
       { id: "ecologia", nombre: "Ecología", semestre: 2, prereq: [] },
       { id: "anato", nombre: "Anatomía Animal I", semestre: 2, prereq: [] },
       { id: "fisica", nombre: "Física", semestre: 2, prereq: [] },
-      { id: "bioquimica", nombre: "Bioquímica", semestre: 2, prereq: ["quimica", "bioce"]},
-      { id: "histo", nombre: "Histología y Embriología", semestre: 2, prereq: ["fisiologia"]},
-        { id: "ciudadania", nombre: "Ciudadanía para el buen vivir", semestre: 2, prereq: [] },
+      { id: "bioquimica", nombre: "Bioquímica", semestre: 2, prereq: ["quimica", "biocel"] },
+      { id: "histo", nombre: "Histología y Embriología", semestre: 2, prereq: [] },
+      { id: "ciudadania", nombre: "Ciudadanía para el buen vivir", semestre: 2, prereq: [] },
 
       { id: "economia", nombre: "Economía y fundamentos de la administración pecuaria", semestre: 3, prereq: [] },
-      { id: "anato_II", nombre: "Anatomía Animal  II", semestre: 3, prereq: [“anato”] },
-      { id: "bioestadistica", nombre: "Bioestadística", semestre: 3, prereq: [“matematicas”] },
+      { id: "anato_II", nombre: "Anatomía Animal II", semestre: 3, prereq: ["anato"] },
+      { id: "bioestadistica", nombre: "Bioestadística", semestre: 3, prereq: ["matematicas"] },
       { id: "bioetica", nombre: "Bioética", semestre: 3, prereq: [] },
       { id: "fisio_animal", nombre: "Fisiología Animal", semestre: 3, prereq: ["histo"] },
-      { id: "ingles_I", nombre: "Inglés I", semestre: 3, prereq: ["enfermeria", "fisiologia"] },
+      { id: "ingles_I", nombre: "Inglés I", semestre: 3, prereq: [] },
 
       { id: "epidemiologia", nombre: "Epidemiología", semestre: 4, prereq: ["bioestadistica"] },
       { id: "nutricion", nombre: "Nutrición Animal", semestre: 4, prereq: [] },
       { id: "fisiopatologia", nombre: "Fisiopatología", semestre: 4, prereq: ["fisio_animal"] },
       { id: "practica", nombre: "Práctica Inicial", semestre: 4, prereq: ["fisio_animal"] },
-      { id: "inmunologia", nombre: "Inmunología", semestre: 4, prereq: ["bioquimica",] },
-      { id: "genetica", nombre: "Genética", semestre: 4, prereq: [“bioestadistica”] },
+      { id: "inmunologia", nombre: "Inmunología", semestre: 4, prereq: ["bioquimica"] },
+      { id: "genetica", nombre: "Genética", semestre: 4, prereq: ["bioestadistica"] },
       { id: "ingles_II", nombre: "Inglés II", semestre: 4, prereq: ["ingles_I"] },
 
       { id: "alimentacion", nombre: "Alimentación Animal", semestre: 5, prereq: ["nutricion"] },
@@ -128,34 +129,34 @@
       { id: "poligastrico", nombre: "Producción Poligástricos", semestre: 6, prereq: ["alimentacion"] },
       { id: "monogastrico", nombre: "Producción Monogástricos", semestre: 6, prereq: ["alimentacion"] },
       { id: "imagenologia", nombre: "Imagenología", semestre: 6, prereq: ["anato_II"] },
-      { id: "semiologia", nombre: "Semiología", semestre: 6, prereq: [“pato_siste”] },
-     { id: "laboratorio", nombre: "Laboratorio Clínico", semestre: 6, prereq: [“inmunologia] },
-     { id: "tecnologia", nombre: "Tecnología e inocuidad de los alimentos de origen animal", semestre: 6, prereq: [] },
-     { id: "electivo_I", nombre: "Electivo Formación Integral", semestre: 6, prereq: [] },
+      { id: "semiologia", nombre: "Semiología", semestre: 6, prereq: ["pato_siste"] },
+      { id: "laboratorio", nombre: "Laboratorio Clínico", semestre: 6, prereq: ["inmunologia"] },
+      { id: "tecnologia", nombre: "Tecnología e inocuidad de los alimentos de origen animal", semestre: 6, prereq: [] },
+      { id: "electivo_I", nombre: "Electivo Formación Integral", semestre: 6, prereq: [] },
 
       { id: "acuicola", nombre: "Producción Acuícola", semestre: 7, prereq: ["genetica"] },
       { id: "ia", nombre: "Inteligencia Artificial e Innovación Tecnológica en Medicina Veterinaria", semestre: 7, prereq: [] },
-      { id: "metodologia", nombre: "Metodología de la Investigación", semestre: 7, prereq: [“bioestadistica”] },
-
-      { id: "cirugia", nombre: "Cirugía y Anestesia", semestre: 7, prereq: [“imagenologia”] },
+      { id: "metodologia", nombre: "Metodología de la Investigación", semestre: 7, prereq: ["bioestadistica"] },
+      { id: "cirugia", nombre: "Cirugía y Anestesia", semestre: 7, prereq: ["imagenologia"] },
       { id: "med_interna", nombre: "Medicina Interna", semestre: 7, prereq: ["semiologia", "laboratorio"] },
-     { id: "zoonosis", nombre: "Salud Pública y Zoonosis", semestre: 7, prereq: [“epidemiologia”] },
-     { id: "electivo_II", nombre: "Electivo Formación Integral", semestre: 7, prereq: [] },
+      { id: "zoonosis", nombre: "Salud Pública y Zoonosis", semestre: 7, prereq: ["epidemiologia"] },
+      { id: "electivo_II", nombre: "Electivo Formación Integral", semestre: 7, prereq: [] },
 
- { id: "patologia", nombre: "Patología Acuícola", semestre: 8, prereq: ["acuicola"] },
+      { id: "patologia", nombre: "Patología Acuícola", semestre: 8, prereq: ["acuicola"] },
       { id: "seminario", nombre: "Seminario de Investigación", semestre: 8, prereq: ["metodologia"] },
-     { id: "menores", nombre: "Clínica Animales Menores", semestre: 8, prereq: ["cirugia", "med_interna"]},
-   { id: "mayores", nombre: "Clínica Animales Mayores", semestre: 8, prereq: ["cirugia", "med_interna"]},
-     { id: "gestion", nombre: "Gestión Veterinaria", semestre: 8, prereq: ["economia"] },
+      { id: "menores", nombre: "Clínica Animales Menores", semestre: 8, prereq: ["cirugia", "med_interna"]},
+      { id: "mayores", nombre: "Clínica Animales Mayores", semestre: 8, prereq: ["cirugia", "med_interna"]},
+      { id: "gestion", nombre: "Gestión Veterinaria", semestre: 8, prereq: ["economia"] },
 
       { id: "titulacion_I", nombre: "Trabajo de Titulación I", semestre: 9, prereq: ["seminario"] },
-      { id: "internado_I", nombre: "Internado I ", semestre: 9, prereq: ["mayores", “menores”] },
-      { id: "profundizacion_1", nombre: "Electivo de Profundización", semestre: 9, prereq: [] },
-      { id: "profundizacion_2", nombre: "Electivo de profundización 2", semestre: 9, prereq: [] },
+      { id: "internado_I", nombre: "Internado I", semestre: 9, prereq: ["mayores", "menores"] },
+      { id: "profundizacion_1", nombre: "Electivo de Profundización 1", semestre: 9, prereq: [] },
+      { id: "profundizacion_2", nombre: "Electivo de Profundización 2", semestre: 9, prereq: [] },
 
       { id: "titulacion_II", nombre: "Trabajo de Titulación II", semestre: 10, prereq: ["titulacion_I"] },
       { id: "internado_II", nombre: "Internado II", semestre: 10, prereq: ["internado_I"] },
-      { id: "profundizacion_3", nombre: "Electivo de profundización 3", semestre: 9, prereq: [] },
+      { id: "profundizacion_3", nombre: "Electivo de Profundización 3", semestre: 10, prereq: [] }
+    ];
 
     const estado = JSON.parse(localStorage.getItem("estadoRamos") || "{}");
 
