--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     body {
       font-family: "Segoe UI", sans-serif;
-      background-color: #DFF5E1;
+      background-color: #DCEDCB;
       margin: 0;
       padding: 1rem;
       color: #2E6D4B;
@@ -23,7 +23,7 @@
 
     h1 {
       text-align: center;
-      color: #2E6D4B;
+      color: #3E8E61;
       text-shadow: 1px 1px 2px rgba(46, 109, 75, 0.2);
     }
 
@@ -88,7 +88,7 @@
     }
 
     .ramo.bloqueado {
-      background-color: #C6DCC9;
+      background-color: #3E8E61;
       cursor: not-allowed;
       color: #7A8F7F;
       border-left-color: #7A8F7F;
