--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
-      background-color: #98ff96; /* Corregido: había ## */
+      background-color: #A8D5BA; /* Corregido: había ## */
       margin: 0;
       padding: 1rem;
       color: #333;
     }
     h1 {
       text-align: center;
-      color: #009929;
+      color: #266040;
     }
     .malla {
       display: flex;
@@ -57,7 +57,7 @@
       text-decoration: line-through;
     }
     .ramo.bloqueado {
-      background-color: #437c5b;
+      background-color: #DFF5E1;
       cursor: not-allowed;
     }
     .tooltip {
