--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       color: #266040;
     }
     .ramo {
-      background-color: #bee0ca;
+      background-color: #DFF5E1;
       margin: 0.5rem 0;
       padding: 0.5rem;
       border-radius: 4px;
@@ -50,10 +50,10 @@
       position: relative;
     }
     .ramo:hover {
-      background-color: #f8cfa6;
+      background-color: #abf8a6;
     }
     .ramo.aprobado {
-      background-color: #609a77;
+      background-color: #bee0ca;;
       text-decoration: line-through;
     }
     .ramo.bloqueado {
