--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       color: #266040;
     }
     .ramo {
-      background-color: #DFF5E1;
+      background-color: #abf8a6;
       margin: 0.5rem 0;
       padding: 0.5rem;
       border-radius: 4px;
@@ -53,11 +53,11 @@
       background-color: #abf8a6;
     }
     .ramo.aprobado {
-      background-color: #bee0ca;;
+      background-color: #bee0ca;
       text-decoration: line-through;
     }
     .ramo.bloqueado {
-      background-color: #DFF5E1;
+      background-color: #4a7347;
       cursor: not-allowed;
     }
     .tooltip {
