--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       text-decoration: line-through;
     }
     .ramo.bloqueado {
-      background-color: #4a7347;
+      background-color: #5e945a;
       cursor: not-allowed;
     }
     .tooltip {
