--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
-      background-color: #A8D5BA; /* Corregido: había ## */
+      background-color: #A8D5BA;
       margin: 0;
       padding: 1rem;
       color: #333;
@@ -50,7 +50,7 @@
       position: relative;
     }
     .ramo:hover {
-      background-color: #abf8a6;
+      background-color: #9ee89a;
     }
     .ramo.aprobado {
       background-color: #bee0ca;
@@ -84,6 +84,7 @@
 </head>
 <body>
   <h1>Malla Medicina Veterinaria - Universidad de Los Lagos</h1>
+
   <div class="malla">
     <div class="fila" id="fila-superior"></div>
     <div class="fila" id="fila-inferior"></div>
@@ -103,14 +104,12 @@
       { id: "bioquimica", nombre: "Bioquímica", semestre: 2, prereq: ["quimica", "biocel"] },
       { id: "histo", nombre: "Histología y Embriología", semestre: 2, prereq: ["biocel"] },
       { id: "ciudadania", nombre: "Ciudadanía para el buen vivir", semestre: 2, prereq: [] },
-
       { id: "economia", nombre: "Economía y fundamentos de la administración pecuaria", semestre: 3, prereq: [] },
       { id: "anato_II", nombre: "Anatomía Animal II", semestre: 3, prereq: ["anato"] },
       { id: "bioestadistica", nombre: "Bioestadística", semestre: 3, prereq: ["matematicas"] },
       { id: "bioetica", nombre: "Bioética", semestre: 3, prereq: [] },
       { id: "fisio_animal", nombre: "Fisiología Animal", semestre: 3, prereq: ["histo"] },
       { id: "ingles_I", nombre: "Inglés I", semestre: 3, prereq: [] },
-
       { id: "epidemiologia", nombre: "Epidemiología", semestre: 4, prereq: ["bioestadistica"] },
       { id: "nutricion", nombre: "Nutrición Animal", semestre: 4, prereq: [] },
       { id: "fisiopatologia", nombre: "Fisiopatología", semestre: 4, prereq: ["fisio_animal"] },
@@ -118,14 +117,12 @@
       { id: "inmunologia", nombre: "Inmunología", semestre: 4, prereq: ["bioquimica"] },
       { id: "genetica", nombre: "Genética", semestre: 4, prereq: ["bioestadistica"] },
       { id: "ingles_II", nombre: "Inglés II", semestre: 4, prereq: ["ingles_I"] },
-
       { id: "alimentacion", nombre: "Alimentación Animal", semestre: 5, prereq: ["nutricion"] },
       { id: "microbiologia", nombre: "Microbiología", semestre: 5, prereq: ["inmunologia"] },
       { id: "pato_siste", nombre: "Patología Sistémica", semestre: 5, prereq: ["fisiopatologia"] },
       { id: "reproduccion", nombre: "Reproducción Animal", semestre: 5, prereq: ["genetica"] },
-      { id: "farmacologia", nombre: "Farmacología", semestre: 5, prereq: ["fisiopatologia"] },  
-      { id: "parasitologia", nombre: "Parasitología", semestre: 5, prereq: ["zoo"] }, 
-
+      { id: "farmacologia", nombre: "Farmacología", semestre: 5, prereq: ["fisiopatologia"] },
+      { id: "parasitologia", nombre: "Parasitología", semestre: 5, prereq: ["zoo"] },
       { id: "poligastrico", nombre: "Producción Poligástricos", semestre: 6, prereq: ["alimentacion"] },
       { id: "monogastrico", nombre: "Producción Monogástricos", semestre: 6, prereq: ["alimentacion"] },
       { id: "imagenologia", nombre: "Imagenología", semestre: 6, prereq: ["anato_II"] },
@@ -133,7 +130,6 @@
       { id: "laboratorio", nombre: "Laboratorio Clínico", semestre: 6, prereq: ["inmunologia"] },
       { id: "tecnologia", nombre: "Tecnología e inocuidad de los alimentos de origen animal", semestre: 6, prereq: [] },
       { id: "electivo_I", nombre: "Electivo Formación Integral", semestre: 6, prereq: [] },
-
       { id: "acuicola", nombre: "Producción Acuícola", semestre: 7, prereq: ["genetica"] },
       { id: "ia", nombre: "Inteligencia Artificial e Innovación Tecnológica en Medicina Veterinaria", semestre: 7, prereq: [] },
       { id: "metodologia", nombre: "Metodología de la Investigación", semestre: 7, prereq: ["bioestadistica"] },
@@ -141,19 +137,16 @@
       { id: "med_interna", nombre: "Medicina Interna", semestre: 7, prereq: ["semiologia", "laboratorio"] },
       { id: "zoonosis", nombre: "Salud Pública y Zoonosis", semestre: 7, prereq: ["epidemiologia"] },
       { id: "electivo_II", nombre: "Electivo Formación Integral", semestre: 7, prereq: [] },
-
       { id: "patologia", nombre: "Patología Acuícola", semestre: 8, prereq: ["acuicola"] },
       { id: "seminario", nombre: "Seminario de Investigación", semestre: 8, prereq: ["metodologia"] },
-      { id: "menores", nombre: "Clínica Animales Menores", semestre: 8, prereq: ["cirugia", "med_interna"]},
-      { id: "mayores", nombre: "Clínica Animales Mayores", semestre: 8, prereq: ["cirugia", "med_interna"]},
+      { id: "menores", nombre: "Clínica Animales Menores", semestre: 8, prereq: ["cirugia", "med_interna"] },
+      { id: "mayores", nombre: "Clínica Animales Mayores", semestre: 8, prereq: ["cirugia", "med_interna"] },
       { id: "gestion", nombre: "Gestión Veterinaria", semestre: 8, prereq: ["economia"] },
       { id: "etica", nombre: "Ética Médica Veterinaria", semestre: 8, prereq: ["bioetica"] },
-
       { id: "titulacion_I", nombre: "Trabajo de Titulación I", semestre: 9, prereq: ["seminario"] },
       { id: "internado_I", nombre: "Internado I", semestre: 9, prereq: ["mayores", "menores"] },
       { id: "profundizacion_1", nombre: "Electivo de Profundización 1", semestre: 9, prereq: [] },
       { id: "profundizacion_2", nombre: "Electivo de Profundización 2", semestre: 9, prereq: [] },
-
       { id: "titulacion_II", nombre: "Trabajo de Titulación II", semestre: 10, prereq: ["titulacion_I"] },
       { id: "internado_II", nombre: "Internado II", semestre: 10, prereq: ["internado_I"] },
       { id: "profundizacion_3", nombre: "Electivo de Profundización 3", semestre: 10, prereq: [] }
@@ -191,12 +184,18 @@
       return div;
     }
 
+    // Mostrar los semestres 1–5 en la parte superior y 6–10 en la inferior
     for (let s = 1; s <= 10; s++) {
       const cont = document.createElement("div");
       cont.className = "semestre";
       cont.innerHTML = `<h2>Semestre ${s}</h2>`;
       ramos.filter(r => r.semestre === s).forEach(r => cont.appendChild(crearRamo(r)));
-      (s % 2 === 1 ? document.getElementById("fila-superior") : document.getElementById("fila-inferior")).appendChild(cont);
+
+      if (s <= 5) {
+        document.getElementById("fila-superior").appendChild(cont);
+      } else {
+        document.getElementById("fila-inferior").appendChild(cont);
+      }
     }
   </script>
 </body>
